# krader

./: .env.example  .gitignore  README.md  diagnose_kiwoom.py  main.py  pyproject.toml  test_kiwoom_pyqt.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  FLOW.md  STRATEGY_GUIDE.md
krader/: __init__.py  app.py  config.py
krader/broker/: __init__.py  base.py  errors.py  kiwoom.py
krader/events/: __init__.py  bus.py  types.py
krader/execution/: __init__.py  idempotency.py  oms.py  order.py
krader/journal/: __init__.py  service.py  types.py  writer.py
krader/market/: __init__.py  candle.py  service.py  types.py
krader/monitor/: __init__.py  control.py  logger.py
krader/notification/: __init__.py  email_notifier.py
krader/persistence/: __init__.py  database.py  models.py  repository.py
krader/recovery/: __init__.py  reconciler.py
krader/risk/: __init__.py  portfolio.py  validator.py
krader/strategy/: __init__.py  base.py  pullback_v1.py  registry.py  signal.py
krader/universe/: __init__.py  service.py
tests/: __init__.py  test_buy_signal.py  test_email_notification.py  test_integration_scenarios.py  test_risk_validator.py  test_strategy_controlled.py  test_strategy_registry.py  test_strategy_simulation.py
tests/fixtures/: __init__.py  market_data.py
